--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+click==6.6
+Flask==0.11.1
+gunicorn==19.6.0
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
 numpy==1.11.2
 pandas==0.19.1
 python-dateutil==2.6.0
@@ -6,3 +12,4 @@ scikit-learn==0.18.1
 scipy==0.18.1
 six==1.10.0
 sklearn==0.0
+Werkzeug==0.11.11
