--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.0
 click==6.6
 Flask==0.11.1
 gunicorn==19.6.0
@@ -5,7 +6,9 @@ itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 numpy==1.11.2
+packaging==16.8
 pandas==0.19.1
+pyparsing==2.1.10
 python-dateutil==2.6.0
 pytz==2016.7
 scikit-learn==0.18.1
@@ -13,4 +16,4 @@ scipy==0.18.1
 six==1.10.0
 sklearn==0.0
 Werkzeug==0.11.11
-yogi==0.1
+yogi-utils==0.1
